archive/backup/cluster-b/istio-messaging-route.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: veramo-messaging-vs
  namespace: nf-b-namespace
spec:
  hosts:
  - "*"
  gateways:
  - nf-b-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /messaging
    route:
    - destination:
        host: veramo-nf-b.nf-b-namespace.svc.cluster.local
        port:
          number: 7002
