archive/backup/cluster-b/istio-mtls-b.yaml
# mTLS Configuration for Cluster B
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: default-mtls
  namespace: nf-b-namespace
spec:
  mtls:
    mode: STRICT
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: veramo-nf-b-mtls
  namespace: nf-b-namespace
spec:
  host: veramo-nf-b.nf-b-namespace.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
