archive/backup/cluster-b/istio-serviceentry.yaml
# ServiceEntry - Cluster B kann Cluster A erreichen
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: nf-a-external
  namespace: nf-b-namespace
spec:
  hosts:
  - veramo-nf-a.nf-a-namespace.svc.cluster.local
  addresses:
  - 240.240.0.1
  ports:
  - number: 3000
    name: http-veramo
    protocol: HTTP
  location: MESH_INTERNAL
  resolution: STATIC
  endpoints:
  - address: 10.96.47.70  # Cluster A East-West Gateway
    labels:
      cluster: cluster-a
